<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_allfiles">


    <fragment
        android:id="@+id/nav_allfiles"
        android:name="com.example.moofyread.ui.AllFiles.AllFilesFragment"
        android:label="@string/menu_allfiles"
        tools:layout="@layout/fragment_allfiles" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.moofyread.ui.Favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />



    <fragment
        android:id="@+id/nav_thestar"
        android:name="com.example.moofyread.ui.TheStar.TheStarFragment"
        android:label="@string/menu_thestar">

        <action
            android:id="@+id/action_nav_thestar_to_nav_thesun"
            app:destination="@id/nav_thesun" />

        <action
            android:id="@+id/action_nav_thestar_to_nav_thestraitstimes"
            app:destination="@id/nav_thestraitstimes" />

    </fragment>



    <fragment
        android:id="@+id/nav_thestraitstimes"
        android:name="com.example.moofyread.ui.TheStraitsTimes.TheStraitsTimesFragment"
        android:label="@string/menu_tst">

        <action
            android:id="@+id/action_nav_thestraitstimes_to_nav_thestar"
            app:destination="@id/nav_thestar" />

        <action
            android:id="@+id/action_nav_thestraitstimes_to_nav_thesun"
            app:destination="@id/nav_thesun" />

    </fragment>



    <fragment

        android:id="@+id/nav_thesun"
        android:name="com.example.moofyread.ui.TheSun.TheSunFragment"
        android:label="@string/menu_thesun">

        <action
            android:id="@+id/action_nav_thesun_to_nav_thestar"
            app:destination="@id/nav_thestar" />

        <action
            android:id="@+id/action_nav_thesun_to_nav_thestraitstimes"
            app:destination="@id/nav_thestraitstimes" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.moofyread.ui.Settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
